--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html,body{
 }
 
 .sidebar-pos{
-    position: absolute;
+    position: relative;
     top: 50%;
     transform: translateY(-50%);
 
